--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 
 <h1 align=center> my Robotics page by Brandon</h1>
 
-<li><a href="myfirst.html.html">myfirst.html</a>
-<li><a href="@@@.html">@@@</a>
-<li><a href="@@@.html">@@@</a>
-<li><a href="@@@.html">@@@</a>
-<li><a href="@@@.html">@@@</a>
-<li><a href="@@@.html">@@@</a>
-<li><a href="@@@.html">@@@</a>
-<li><a href="@@@.html">@@@</a>
+<li><a href="myfirst.html">myfirst.</a>
+<li><a href="@@@.">@@@</a>
+<li><a href="@@@.">@@@</a>
+<li><a href="@@@.">@@@</a>
+<li><a href="@@@.">@@@</a>
+<li><a href="@@@.">@@@</a>
+<li><a href="@@@.">@@@</a>
+<li><a href="@@@.">@@@</a>
