--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 
 <h1 align=center> my Robotics page by Brandon</h1>
 
-<li><a href="myfirst.html">myfirst.</a>
+<li><a href="myfirst.">myfirst.</a>
 <li><a href="@@@.">@@@</a>
 <li><a href="@@@.">@@@</a>
 <li><a href="@@@.">@@@</a>
