--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,10 @@
 
 <h1 align=center> my Robotics page by Brandon</h1>
 
-My change
-asad
-New Change
+
 
 <li><a href="myfirst.html">myfirst.html</a>
-<li><a href="mywebapp.html.">mywebapp.html</a>
+<li><a href="mywebapp.html">mywebapp.html</a>
 <li><a href="@@@.">@@@</a>
 <li><a href="@@@.">@@@</a>
 <li><a href="@@@.">@@@</a>
