--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
 <li><a href="myfirst.html">myfirst.html</a>
 <li><a href="mywebapp.html">mywebapp.html</a>
-<li><a href="https://krunker.io/?game=SV:yctyr.">https://krunker.io/?game=SV:yctyr</a>
+<li><a href="https://krunker.io/.">https://krunker.io/</a>
 <li><a href="@@@.">@@@</a>
 <li><a href="@@@.">@@@</a>
 <li><a href="@@@.">@@@</a>
