--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 
 <h1 align=center> my Robotics page by Brandon</h1>
-
+<h1 align=center> sometimes I question...
 
 
 <li><a href="myfirst.html">myfirst.html</a>
