--- a/public/mywebapp.html
+++ b/public/mywebapp.html
@@ -265,13 +265,13 @@ Note that Advanced users can also use the pin numbers, so D7 = pin 7 on Photon b
      <br><br>
    
    
-   <input type="button" value="CCW" onClick="{
+   <input type="button" value="FORWARD" onClick="{
     sendToParticle('digitalWrite(D6,1);')
     sendToParticle('digitalWrite(D5,0);')
 }">   <br><br>
 
  
-   <input type="button" value="CW" onClick="{
+   <input type="button" value="BACKWARD" onClick="{
     sendToParticle('digitalWrite(D6,0);')
     sendToParticle('digitalWrite(D5,1);')
 }">   <br><br>
