--- a/public/mywebapp.html
+++ b/public/mywebapp.html
@@ -242,21 +242,22 @@ Note that Advanced users can also use the pin numbers, so D7 = pin 7 on Photon b
 <input type="button" value="analogRead(A0);" onClick="{
     sendToParticle('analogRead(A0);')
 }">   Photon Direct Analog input, PI uses capactive Input both returns 0-4095<br>
-     
+ 
+<input type="button" value="analogWrite(A4,300);" onClick="{
+    sendToParticle('analogWrite(A4,300);')
+}"> EXTREMELY Powerful   
    
-   
-   
-
-<input type="button" value="analogWrite(A4,255);" onClick="{
-    sendToParticle('analogWrite(A4,255);')
-}"> Powerful
-  
 
 <input type="button" value="analogWrite(A4,100);" onClick="{
     sendToParticle('analogWrite(A4,100);')
+}"> Powerful
+  
+
+<input type="button" value="analogWrite(A4,50);" onClick="{
+    sendToParticle('analogWrite(A4,100);')
 }"> Medium
   
-<input type="button" value="analogWrite(A4,0);" onClick="{
+<input type="button" value="analogWrite(A4,50);" onClick="{
     sendToParticle('analogWrite(A4,0);')
 }"> Off,  These are PWM 0-255 <br><br>
      
