--- a/public/mywebapp.html
+++ b/public/mywebapp.html
@@ -244,13 +244,13 @@ Note that Advanced users can also use the pin numbers, so D7 = pin 7 on Photon b
 }">   Photon Direct Analog input, PI uses capactive Input both returns 0-4095<br>
  
 <input type="button" value="analogWrite(A4,300);" onClick="{
-    sendToParticle('analogWrite(A4,300);')
-}"> EXTREMELY Powerful   
+    sendToParticle('analogWrite(A4,25);')
+}"> RIGHT    
    
 
 <input type="button" value="analogWrite(A4,100);" onClick="{
-    sendToParticle('analogWrite(A4,100);')
-}"> Powerful
+    sendToParticle('analogWrite(A4,-25);')
+}"> LEFT
   
 
 <input type="button" value="analogWrite(A4,50);" onClick="{
